--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -31,7 +30,9 @@
   padding-bottom: 0;
 }
 
-.result-item p {margin: 0;}
+.result-item p {
+  margin: 0;
+}
 
 .result-item .p2 {
   flex: 1;
@@ -39,3 +40,21 @@
   word-break: break-all;
 }
 
+.searchBox {
+  width: 500px;
+  margin-top: 15px;
+}
+
+@media only screen and (max-width: 767px) {
+  .App-header {
+    padding: 15px;
+  }
+
+  .result {
+    width: 100%;
+  }
+
+  .searchBox {
+    width: 100%;
+  }
+}
